--- a/starter_kits/node_tx/views/index.jade
+++ b/starter_kits/node_tx/views/index.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to the #{title}
+  a(href="/transactions") Get Transactions.
+  a(href="/clear_cookies") Clear Cookie.
